--- a/notritionVendorsAPP/View/LogInAndLogOut.storyboard
+++ b/notritionVendorsAPP/View/LogInAndLogOut.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="1i4-M6-GW7">
             <objects>
-                <viewController id="yH5-SP-3xA" userLabel="Login View Controller" customClass="LoginController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginLogoutStoryboardID" id="yH5-SP-3xA" userLabel="Login View Controller" customClass="LoginController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YcQ-tb-AU2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,7 +24,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Zkp-by-EE2">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="100"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nutrition_icon" translatesAutoresizingMaskIntoConstraints="NO" id="cSm-2N-Ztl">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="cSm-2N-Ztl">
                                                 <rect key="frame" x="127.5" y="0.0" width="100" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="999" constant="100" id="1Sk-sF-aUw"/>
@@ -40,7 +40,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="0O3-Ya-0m6">
                                         <rect key="frame" x="0.0" y="110" width="355" height="205"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Na-35-m1k">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Na-35-m1k">
                                                 <rect key="frame" x="50" y="0.0" width="255" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="VT0-th-aXg"/>
@@ -57,15 +57,19 @@
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4RG-98-Xiw">
                                                 <rect key="frame" x="50" y="110" width="255" height="40"/>
-                                                <color key="backgroundColor" red="0.33333333329999998" green="0.64313725489999995" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" red="0.17254901959999999" green="0.65098039220000004" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <state key="normal" title="Login">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="loginPressed:" destination="yH5-SP-3xA" eventType="touchUpInside" id="IhU-vF-dYW"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oWa-OZ-OUU">
                                                 <rect key="frame" x="50" y="165" width="255" height="40"/>
-                                                <state key="normal" title="Sign up"/>
+                                                <color key="tintColor" red="0.17254901959999999" green="0.65098039220000004" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="Need an account? Sign up"/>
                                                 <connections>
                                                     <segue destination="pN9-qs-EtN" kind="show" animates="NO" id="wLU-VJ-kOn"/>
                                                 </connections>
@@ -100,8 +104,8 @@
                         <viewLayoutGuide key="safeArea" id="hAI-24-IdY"/>
                     </view>
                     <connections>
-                        <outlet property="password" destination="rou-hC-cf6" id="xNj-qn-wmK"/>
-                        <outlet property="username" destination="2Na-35-m1k" id="DVw-LN-bDD"/>
+                        <outlet property="emailTF" destination="2Na-35-m1k" id="MWT-Qc-crZ"/>
+                        <outlet property="passwordTF" destination="rou-hC-cf6" id="8qB-Hr-gka"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ljj-TF-VM0" sceneMemberID="firstResponder"/>
@@ -267,6 +271,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logo" width="119" height="119"/>
         <image name="nutrition_icon" width="460" height="460"/>
     </resources>
 </document>
