--- a/notritionVendorsAPP/View/LogInAndLogOut.storyboard
+++ b/notritionVendorsAPP/View/LogInAndLogOut.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Dxd-g7-H09">
-                                <rect key="frame" x="10" y="120" width="355" height="315"/>
+                                <rect key="frame" x="10" y="164" width="355" height="315"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Zkp-by-EE2">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="100"/>
@@ -71,7 +71,7 @@
                                                 <color key="tintColor" red="0.17254901959999999" green="0.65098039220000004" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Need an account? Sign up"/>
                                                 <connections>
-                                                    <segue destination="pN9-qs-EtN" kind="show" animates="NO" id="wLU-VJ-kOn"/>
+                                                    <segue destination="OuZ-m9-mNt" kind="push" id="36h-Cz-GJU"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -103,6 +103,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hAI-24-IdY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="LZC-vt-HtN"/>
                     <connections>
                         <outlet property="emailTF" destination="2Na-35-m1k" id="MWT-Qc-crZ"/>
                         <outlet property="passwordTF" destination="rou-hC-cf6" id="8qB-Hr-gka"/>
@@ -110,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ljj-TF-VM0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3014" y="-71"/>
+            <point key="canvasLocation" x="-2076" y="-71.514242878560722"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="66f-W5-IgX">
@@ -130,7 +131,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="za5-KO-f4m">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="140"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nutrition_icon" translatesAutoresizingMaskIntoConstraints="NO" id="PXg-Hz-uLj">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="PXg-Hz-uLj">
                                                 <rect key="frame" x="127.5" y="0.0" width="100" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" priority="999" constant="100" id="kvb-Yn-5JD"/>
@@ -140,7 +141,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZg-ar-h7W">
                                                 <rect key="frame" x="97.5" y="110" width="160" height="30"/>
                                                 <state key="normal" title="Choose the avatar here">
-                                                    <color key="titleColor" red="0.30196078431372547" green="0.68235294117647061" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="titleColor" red="0.17254901959999999" green="0.65098039220000004" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="chooseAvatarpressed:" destination="OuZ-m9-mNt" eventType="touchUpInside" id="lw8-Uw-rVs"/>
@@ -226,11 +227,6 @@
                         <viewLayoutGuide key="safeArea" id="Oep-yf-lM3"/>
                     </view>
                     <navigationItem key="navigationItem" id="hP2-oq-UTH">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="zCn-NW-obz">
-                            <connections>
-                                <action selector="cacelPressed:" destination="OuZ-m9-mNt" id="RIl-Pg-UiE"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="0ba-Fg-TTF">
                             <connections>
                                 <action selector="donePressed:" destination="OuZ-m9-mNt" id="9Dx-45-11C"/>
@@ -249,29 +245,28 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tA6-a8-wWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1412" y="-21"/>
+            <point key="canvasLocation" x="-1132" y="-96"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="WHt-Vx-2Ub">
+        <scene sceneID="ObY-6k-F1G">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pN9-qs-EtN" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ral-D9-6dD" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TjW-Uo-asN">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iZo-R1-cpj">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="OuZ-m9-mNt" kind="relationship" relationship="rootViewController" id="uaM-p8-uxl"/>
+                        <segue destination="yH5-SP-3xA" kind="relationship" relationship="rootViewController" id="TEZ-vX-4Fo"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZdM-dC-yO4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4iT-6R-ASR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2265" y="-72"/>
+            <point key="canvasLocation" x="-3015.1999999999998" y="-71.514242878560722"/>
         </scene>
     </scenes>
     <resources>
         <image name="logo" width="119" height="119"/>
-        <image name="nutrition_icon" width="460" height="460"/>
     </resources>
 </document>
